--- a/index.html
+++ b/index.html
@@ -14,19 +14,27 @@
 
 <body>
 
-  <div class="card">
-    
-    <div>
-      <img class="qrimage" src="./images/image-qr-code.png">
-    </div>
-    <div>
-      <p class="copy">Improve your front-end<br>skills by building projects</p>
-    </div>
-    <div>
-      <p class="copytext">Scan the QR code to visit Frontend Mentor and take your coding skills to the next lavel</p>
-    </div>
+    <main>
 
-  </div>
+      <div class="center">
+
+        <div class="card">
+          
+          <div>
+            <img class="qrimage" alt="QR Code tag for Frontend Mentor" src="./images/image-qr-code.png">
+          </div>
+          <div>
+            <h1 class="copy">Improve your front-end<br>skills by building projects</h1>
+          </div>
+          <div>
+            <p class="copytext">Scan the QR code to visit Frontend Mentor and take your coding skills to the next lavel</p>
+          </div>
+
+        </div>
+
+      </div>
+
+    </main>
 
 </body>
 </html>
